<resources>
    <string name="app_name">PhoneAgenda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="save_contact">Save contact</string>
    <string name="addContact">Add new contact</string>
    <string name="editContact">Edit contact</string>
    <string name="update_contact">Update contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="date_of_birht">Date of Birht</string>
    <string name="string_sync_items">%1$s items remaing to sync</string>
</resources>
